--- a/tool_shed_wsgi.ini
+++ b/tool_shed_wsgi.ini
@@ -1,10 +1,11 @@
-[server:main]
-use = egg:Paste#http
-port = 9009
-host = 127.0.0.1
-use_threadpool = true
-threadpool_workers = 10
-threadpool_kill_thread_limit = 10800
+[uwsgi]
+socket = 127.0.0.1:4002
+processes = 2
+threads = 4
+master = True
+logto = /home/vagrant/uwsgi-toolshed.log
+pythonpath = lib
+
 [filter:proxy-prefix]
 use = egg:PasteDeploy#prefix
 prefix = /toolshed
@@ -22,7 +23,7 @@ session_secret = changethisinproduction
 id_secret = changethisinproductiontoo
 debug = true
 use_lint = false
-admin_users = admin@localhost
+admin_users = admin@local.host
 require_login = False
 use_new_layout = true
 static_enabled = True
