--- a/universe_wsgi.ini
+++ b/universe_wsgi.ini
@@ -1,10 +1,26 @@
-[server:main]
+[uwsgi]
+socket = 127.0.0.1:4001
+stats = 127.0.0.1:9191
+processes = 2
+threads = 4
+master = True
+logto = /home/vagrant/uwsgi.log
+pythonpath = lib
+
+[server:handler0]
 use = egg:Paste#http
-port = 8080
-host = 127.0.0.1
+port = 9010
 use_threadpool = True
-threadpool_kill_thread_limit = 10800
-use = egg:Paste#gzip
+threadpool_workers = 10
+
+[server:handler1]
+use = egg:Paste#http
+port = 9011
+use_threadpool = True
+threadpool_workers = 10
+
+
+
 [filter:proxy-prefix]
 use = egg:PasteDeploy#prefix
 prefix = /galaxy
@@ -32,7 +48,7 @@ serve_xss_vulnerable_mimetypes = True
 debug = True
 use_interactive = True
 id_secret = pz7BK5GCDo6bP83RQ8hiTuj627w1dxspsHZ2Fu45q4
-admin_users = admin@localhost
+admin_users = admin@local.host
 require_login = True
 allow_user_creation = True
 allow_user_impersonation = True
