--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,17 @@
 client_max_body_size 50g;
 uwsgi_read_timeout 300;
 
+upstream galaxy_app {
+    server localhost:9009;
+}
+
 server {
     listen 80 default_server;
     server_name  localhost;
-    root /home/vagrant/;
+    root /usr/share/nginx/html/;
     index index.html;
 
     location / {
-    }
-
-    location /toolshed/ {
-        uwsgi_pass 127.0.0.1:4002;
-        include uwsgi_params;
     }
 
     # pass to uWSGI by default
@@ -23,22 +22,29 @@ server {
 
     # serve static content
     location /galaxy/static {
-        alias /home/vagrant/galaxy-dist/static;
+        alias /home/vagrant/galaxy/static;
         gzip on;
         gzip_types text/plain text/xml text/javascript text/css application/x-javascript;
         expires 24h;
     }
     location /galaxy/static/style {
-        alias /home/vagrant/galaxy-dist/static/style/blue;
+        alias /home/vagrant/galaxy/static/style/blue;
         gzip on;
         gzip_types text/plain text/xml text/javascript text/css application/x-javascript;
         expires 24h;
     }
     location /galaxy/static/scripts {
-        alias /home/vagrant/galaxy-dist/static/scripts/packed;
+        alias /home/vagrant/galaxy/static/scripts/packed;
         gzip on;
         gzip_types text/plain text/javascript application/x-javascript;
         expires 24h;
+    }
+
+
+    location /toolshed/ {
+        proxy_pass   http://galaxy_app/toolshed/;
+        proxy_set_header   X-Forwarded-Host $host;
+        proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
     }
 
 }
