--- a/supervisor.conf
+++ b/supervisor.conf
@@ -22,8 +22,8 @@ startsecs       = 15
 user            = vagrant
 environment     = PYTHON_EGG_CACHE=/home/vagrant/.python-eggs
 
-[program:toolshed_uwsgi]
-command         = /usr/bin/uwsgi --plugin python --ini-paste /home/vagrant/galaxy/tooL_shed_wsgi.ini
+[program:toolshed]
+command         = /home/vagrant/venv/bin/python ./scripts/paster.py serve tool_shed_wsgi.ini --pid-file=/home/vagrant/toolshed.pid --log-file=/home/vagrant/toolshed.log
 directory       = /home/vagrant/galaxy
 umask           = 022
 autostart       = true
