--- a/tool_shed_wsgi.ini
+++ b/tool_shed_wsgi.ini
@@ -10,6 +10,9 @@ use = egg:PasteDeploy#prefix
 prefix = /toolshed
 [app:main]
 paste.app_factory = galaxy.webapps.tool_shed.buildapp:app_factory
+filter-with = proxy-prefix
+cookie_path = /toolshed
+
 log_level = DEBUG
 database_file = database/community.sqlite
 file_path = database/community_files
