--- a/universe_wsgi.ini
+++ b/universe_wsgi.ini
@@ -46,7 +46,7 @@ static_robots_txt = %(here)s/static/robots.txt
 sanitize_all_html = False
 serve_xss_vulnerable_mimetypes = True
 debug = True
-use_interactive = True
+use_interactive = False
 id_secret = pz7BK5GCDo6bP83RQ8hiTuj627w1dxspsHZ2Fu45q4
 admin_users = admin@local.host
 require_login = True
