Galaxy require periods

--- a/galaxy/tool_shed_wsgi.ini
+++ b/galaxy/tool_shed_wsgi.ini
@@ -25,7 +25,7 @@ session_secret = changethisinproduction
 id_secret = changethisinproductiontoo
 debug = true
 use_lint = false
-admin_users = admin@localhost
+admin_users = admin@local.host
 require_login = False
 use_new_layout = true
 static_enabled = True
